# AquariumDaglig

./: .gitignore  README.md  daglig.b#1  daglig.b#2  daglig.b#3  daglig.b#4  daglig.b#5  daglig.b#6  daglig.b#7  daglig.b#8  daglig.b#9  daglig.brd  daglig.s#1  daglig.s#2  daglig.s#3  daglig.s#4  daglig.s#5  daglig.s#6  daglig.s#7  daglig.s#8  daglig.s#9  daglig.sch  eagle.epf
firmware/: CMakeLists.txt  CMakeLists.txt~  CMakePresets.json  CMakePresets.json~  adc.cpp  adc.cpp~  adc.h  adc.h~  fakkel.cpp  fakkel.cpp~  fakkel.h  fakkel.h~  main.cpp  main.cpp~  usart.cpp  usart.cpp~  usart.h  usart.h~
